syntax = "proto3";
package cis.types;
option csharp_namespace = "CIS.Infrastructure.gRPC.CisTypes";

import "google/protobuf/wrappers.proto";

message GrpcAddress {
  string Street = 1;
  
  google.protobuf.Int32Value BuildingIdentificationNumber = 2;
  
  google.protobuf.Int32Value LandRegistryNumber = 3;
  
  string Postcode = 4;
  
  string City = 5;
  
  google.protobuf.Int32Value CountryId = 6;
}